fix(license):  text shift display

--- a/src/plugins/license/index.scss
+++ b/src/plugins/license/index.scss
@@ -23,8 +23,6 @@ $psignatureBorderRadius: map-get($postSignature, borderRadius);
             margin: 0;
             font-size: 14px;
             line-height: 1.6em;
-            white-space: nowrap;
-            overflow: hidden;
         }
 
         a {
